--- a/MDK-ARM/myCubeMxConfig.uvprojx
+++ b/MDK-ARM/myCubeMxConfig.uvprojx
@@ -408,6 +408,11 @@
               <FileType>1</FileType>
               <FilePath>../Core/Src/stm32f4xx_hal_msp.c</FilePath>
             </File>
+            <File>
+              <FileName>serial_debug.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\serial_debug.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
