Move part of initialization to ADS1274_Init

--- a/MDK-ARM/myCubeMxConfig.uvprojx
+++ b/MDK-ARM/myCubeMxConfig.uvprojx
@@ -413,6 +413,11 @@
               <FileType>1</FileType>
               <FilePath>..\Core\Src\serial_debug.c</FilePath>
             </File>
+            <File>
+              <FileName>data_sample.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\data_sample.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
