Add tcp_echoserver.c from https://github.com/STMicroelectronics/STM32CubeF4/blob/master/Projects/STM324xG_EVAL/Applications/LwIP/LwIP_TCP_Echo_Server/Src/main.c

--- a/MDK-ARM/myCubeMxConfig.uvprojx
+++ b/MDK-ARM/myCubeMxConfig.uvprojx
@@ -418,6 +418,16 @@
               <FileType>1</FileType>
               <FilePath>..\Core\Src\data_sample.c</FilePath>
             </File>
+            <File>
+              <FileName>tcp_echoserver.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\tcp_echoserver.c</FilePath>
+            </File>
+            <File>
+              <FileName>app_ethernet.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\Core\Src\app_ethernet.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
